feat: Export to csv use case and sunnyday test

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>5.2.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.8</version>
+        </dependency>
+
 
     </dependencies>
 
