--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                br.ifsp.husaocarlos.husaocarlos/br.ifsp.husaocarlos.husaocarlos.HelloApplication
+                                br.ifsp.husaocarlos.application.view.App
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
